- add support for a "technical details" section in plugin help files
- add option to enable / disable single options of a radio or dropdown control in plugins		TODO: document
- t-test plugin now also allows to calculate a paired test
- show current working directory in the statusbar
- add run selection action to all HTML windows
- add custom icons for run line/selection/all
- make sure not to run parts of an incomplete user command. It would lead to all sorts of subtle problems
- if an incomplete command was piped through the console, the console does not become blocked for piping
- make "run current line" advance the cursor to next line after running
- warnings and errors are highlighted in command log / console (warnings only for R >= 2.5.x)
- plugin generated commands are run in a local() environment, allowing for more consise code		TODO: adjust plugins, etc.
- also support filename completion in the console (mode of completion is determined by heuristic means)
- initial support for R's Sys.setlocale(), and Encoding of CHARSXPs
- in help files, a short title for sections (for the navigation bar) can be defined
- the currently active window is now highlighted using a thin red border
- fixed: changing the type of a column in the data editor was broken
- fixed: quitting while a plugin was still active would sometimes crash rkward
- new shortcuts for window navigation: next/previous window, activate console, activate command log, etc.
- new functions rk.describe.alternative () and rk.print.literal () for use in plugins
- new plugin: Phillips-Perron test
- new plugin: Mood test
- new plugins: variance tests (F test (aka var.test), Bartlett test, Flingner test)
- new plugin: pareto chart
- new plugin: stem-and-leaf plot
- make readline dialog store last size and position
- new plugins: outlier tests (chisq.out.test, dixon.test, grubbs.test, outlier)
- support R's mechanism for checking the C stack limits (only with R 2.3.x or greater, and not on all platforms)